--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HW4</title>
+    <title>My Homeworks</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My library</h1>
+    <h1>My Homeworks</h1>
     <div class="container">
         <ul>
-            <li><a href="task1/index.html">myTrim</a></li>
-            <li><a href="task2/index.html">mySubstring</a></li>
-            <li><a href="task3/index.html">mySearch</a></li>
-            <li><a href="task4/index.html">myRepeat</a></li>
-            <li><a href="task5/index.html">mySplit</a></li>
-            <li><a href="task6/index.html">myIncludes</a></li>
+            <li><a href="HW4/index.html">HW4</a></li>
+            <li><a href="HW5/index.html">HW5</a></li>
         </ul>
     </div>
 </body>
