--- a/HW6/index.html
+++ b/HW6/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Homeworks</title>
+    <title>HW6</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Homeworks</h1>
+    <h1>My library</h1>
     <div class="container">
         <ul>
-            <li><a href="HW4/index.html">HW4</a></li>
-            <li><a href="HW5/index.html">HW5</a></li>
-            <li><a href="HW6/index.html">HW6</a></li>
+            <li><a href="task1/index.html">reconstructTree</a></li>
+            <li><a href="task2/index.html">Hex</a></li>
+            <li><a href="task3/index.html">Dictionary</a></li>
+            <li><a href="task4/index.html">Vasya - Clerk</a></li>
         </ul>
     </div>
 </body>
