--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="HW6/index.html">HW6</a></li>
             <li><a href="HW7/index.html">HW7</a></li>
             <li><a href="HW8/index.html">HW8</a></li>
-            <li><a href="blackjack/index.html">HW8</a></li>
+            <li><a href="blackjack/index.html">blackjack</a></li>
         </ul>
     </div>
 </body>
