--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="start-form"></div>
+    <div class="start-form" style="display: none">
+        <div class="card-group">
+            <img src="img/PNG/1.png" class="beginImg1">
+            <img src="img/PNG/4.png" class="beginImg2">
+        </div>
+        <h1>Welcome to game 'Black Jack'!</h1>
+        <p>
+        You will play with computer. Your goal is to get more scores than computer. If you have more than 21 points, you will loose.<br>
+        To start press 'START' button.
+        </p>
+        <div class="start"><p>START</p></div>
+    </div>
     <div class="container">
         <p id="userScore"></p>
         <p id="aiScore"></p>
