--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="start-form" style="display: none">
         <div class="card-group">
-            <img src="img/PNG/1.png" class="beginImg1">
-            <img src="img/PNG/4.png" class="beginImg2">
+            <img src="img/png/1.png" class="beginImg1">
+            <img src="img/png/4.png" class="beginImg2">
         </div>
         <h1>Welcome to game 'Black Jack'!</h1>
         <p>
